<resources>
    <string name="app_name">足迹</string>

    <!-- 网络和内存卡提示 -->
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>


    <!-- Activity名称 -->
    <string name="footprintActivity_name">足迹</string>


    <string name="memotyActivity_name">记忆录</string>
    <string name="title_memoty_ID">标记</string>
    <string name="title_memoty_name">主题</string>
    <string name="title_memoty_time">时间</string>
    <string name="title_memoty_address">地点</string>
    <string name="title_memoty_content">内容</string>


    <!-- Menu名称 -->
    <string name="menu_map_addlocation">添加足迹</string>
    <string name="menu_map_commonn">普通地图</string>
    <string name="menu_map_site">卫星地图</string>
    <string name="menu_map_traffic">实时交通地图(OFF)</string>
    <string name="menu_map_me">我的位置</string>
    <string name="menu_map_com">普通模式</string>
    <string name="menu_map_compass">罗盘模式</string>
    <string name="menu_map_following">跟随模式</string>
    <string name="menu_map_overlord">添加覆盖物</string>
</resources>
