<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical"
    android:scrollbars="none">

    <officeapp.zdd.com.mylibrary.RapidFloatingActionLayout
        xmlns:rfal="http://schemas.android.com/apk/res-auto"
        android:id="@+id/label_list_sample_rfal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        rfal:rfal_frame_color="#ffffff"
        rfal:rfal_frame_alpha="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_magin5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_magin5dp"
                android:text="@string/title_memoty_name" />

            <EditText
                android:id="@+id/ed_memory_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_magin5dp"
                android:text="@string/title_memoty_time" />

            <EditText
                android:id="@+id/ed_memory_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_magin5dp"
                android:text="@string/title_memoty_address" />

            <EditText
                android:id="@+id/ed_memory_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_magin5dp"
                android:text="@string/title_memoty_content" />

            <EditText
                android:id="@+id/ed_memory_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:textColor="@color/black" />
        </LinearLayout>


        <officeapp.zdd.com.mylibrary.RapidFloatingActionButton
            xmlns:rfab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/label_list_sample_rfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            rfab:rfab_size="normal"
            rfab:rfab_drawable="@drawable/rfab__drawable_rfab_default"
            rfab:rfab_color_normal="#37474f"
            rfab:rfab_color_pressed="#263238"
            rfab:rfab_shadow_radius="7dp"
            rfab:rfab_shadow_color="#999999"
            rfab:rfab_shadow_dx="0dp"
            rfab:rfab_shadow_dy="5dp"
            />
    </officeapp.zdd.com.mylibrary.RapidFloatingActionLayout>
</LinearLayout>
